kubernetes/infra/istio-ingress/gateway/app/request-authentication.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/security.istio.io/requestauthentication_v1.json
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: authentik-provider
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
  - issuer: "https://auth.${SECRET_DOMAIN}/application/o/tekton-dashboard/"
    audiences:
    - "tekton-dashboard"
    jwksUri: "https://auth.${SECRET_DOMAIN}/application/o/tekton-dashboard/.well-known/jwks.json"
    forwardOriginalToken: true
