kubernetes/infra/istio-ingress/gateway/app/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: external.${SECRET_DOMAIN}
    io.cilium/lb-ipam-ips: 192.168.1.226
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.226
  externalTrafficPolicy: Cluster
  selector:
    istio: gateway
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
  labels:
    app: istio-ingressgateway
    istio: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      istio: gateway
  template:
    metadata:
      annotations:
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/stats/prometheus"
      labels:
        istio: gateway
        app: istio-ingressgateway
    spec:
      serviceAccountName: istio-ingressgateway-service-account
      containers:
      - name: istio-proxy
        image: docker.io/istio/proxyv2:1.26.3
        args:
        - proxy
        - router
        - --domain
        - $(POD_NAMESPACE)
        - --log_output_level=default:info
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --minGracePeriodInSeconds
        - 30s
        - --serviceCluster
        - istio-ingressgateway
        - --proxyAdminPort
        - "15000"
        - --statusPort
        - "15021"
        - --trust-domain
        - cluster.local
        - --discoveryAddress
        - istiod.istio-system.svc:15012
        - --dnsRefreshRate
        - 300s
        ports:
        - containerPort: 15021
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 15090
          protocol: TCP
          name: http-envoy-prom
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15021
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 2000m
            memory: 1024Mi
