kubernetes/infra/istio-ingress/gateway/app/ingressgateway.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/apps_v1_deployment.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
  labels:
    app: istio-ingressgateway
    istio: gateway
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: gateway
  replicas: 2
  template:
    metadata:
      annotations:
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/stats/prometheus"
        sidecar.istio.io/inject: "false"
      labels:
        app: istio-ingressgateway
        istio: gateway
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: istio-ingressgateway
      securityContext:
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "0"
      containers:
        - name: istio-proxy
          image: docker.io/istio/proxyv2:1.31.0
          args:
            - proxy
            - router
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --proxyLogLevel=warning
            - --proxyComponentLogLevel=misc:error
            - --log_output_level=default:info
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1337
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: istio-envoy
              mountPath: /etc/istio/proxy
            - name: istio-certs
              mountPath: /etc/certs
              readOnly: true
            - name: istio-ca-root-cert
              mountPath: /var/run/secrets/istio
              readOnly: true
            - name: istio-token
              mountPath: /var/run/secrets/tokens
              readOnly: true
            - name: workload-socket
              mountPath: /var/run/secrets/workload-spiffe-uds
          ports:
            - containerPort: 15090
              name: http-envoy-prom
              protocol: TCP
            - containerPort: 15021
              name: status-port
              protocol: TCP
            - containerPort: 80
              name: http2
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 8081
              name: knative-local
              protocol: TCP
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15021
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15021
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: istio-envoy
          emptyDir:
            medium: Memory
        - name: istio-certs
          secret:
            optional: true
            secretName: istio-ingressgateway-certs
        - name: istio-ca-root-cert
          configMap:
            defaultMode: 420
            name: istio-ca-root-cert
            optional: true
        - name: istio-token
          projected:
            sources:
              - serviceAccountToken:
                  path: istio-token
                  expirationSeconds: 43200
                  audience: istio-ca
        - name: workload-socket
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
  labels:
    app: istio-ingressgateway
    istio: gateway
  annotations:
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: status-port
      port: 15021
      targetPort: 15021
      protocol: TCP
    - name: http2
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: knative-local
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: istio-ingressgateway
    istio: gateway
