kubernetes/infra/istio-ingress/gateway/app/auth-policy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/security.istio.io/authorizationpolicy_v1.json
# kubernetes/infra/istio-ingress/gateway/app/auth-policy.yaml
# AuthorizationPolicy for Authentik forward authentication
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authentik-forward-auth
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - tekton.${SECRET_DOMAIN}
              - tekton.${SECRET_DOMAIN}:443
              - tekton.${SECRET_DOMAIN}:80
              - porygon-console.${SECRET_DOMAIN}
              - porygon-console.${SECRET_DOMAIN}:443
              - porygon-console.${SECRET_DOMAIN}:80
